<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/up_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        >
        <!--标题栏-->
        <LinearLayout
            android:id="@+id/layout_titlebar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:src="@mipmap/arrow_back_white"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="#00000000"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/About"
                android:textColor="#ffffff"
                android:textSize="18sp" />
        </LinearLayout>
        <!--Logo-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/layout_titlebar"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:background="@drawable/ic_launcher" />

        <!--APP_Name-->
        <TextView
            android:id="@+id/appName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <!--Slogan-->
        <TextView
            android:id="@+id/slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appName"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@color/white"
            android:textSize="20sp"
            />
        <!--Version-->
        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/slogan"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="V1.0"
            android:textColor="@color/white"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        >
        <!--检查更新-->
        <Button
            android:id="@+id/about_checkUpdate"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/checkUpdate"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/green1"
            />

        <!--反馈-->
        <Button
            android:id="@+id/about_feedback"
            android:layout_width="400dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/about_checkUpdate"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/Feedback"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@color/green1"/>
    </RelativeLayout>

</RelativeLayout>
