<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_collapseMode="pin"
        app:title="@string/FoodIdentifyer"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/foodIdentifyImg"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/bg_foodphoto"
                android:scaleType="fitCenter"/>
            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--名称-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/kindText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_name"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_kind"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="NULL"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--质量-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/food_weight"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_weight"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|end"
                    android:text="0.0"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--所含能量-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/energyText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/food_energy"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_energy"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|end"
                    android:text="0.0"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--蛋白质-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/proteinText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_protein"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_protein"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--碳水化合物-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/carbohydratesText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_arbohydrates"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_carbohydrates"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--脂肪-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/fatText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_adipose"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_fat"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--膳食纤维-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/fiberText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_Dietary_fiber"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_fiber"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

            <!--糖-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="15dp">

                <TextView
                    android:id="@+id/sugarText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/food_sugar"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/food_sugar"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:text="0.0"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_vertical|end"
                    android:background="@color/transparent"/>
            </LinearLayout>

            <!--分割线-->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey" />

        </LinearLayout>
    </ScrollView>




</LinearLayout>